# webcam_send

./: CMakeLists.txt  Dockerfile  build_docker.sh  launch_c.sh  launch_py.sh  make.sh  webcam_recv.cpp  webcam_recv.py  webcam_recv_openpose.py  webcam_send.py
